Fixed the logo collapsing

--- a/src/main.scss
+++ b/src/main.scss
@@ -138,6 +138,7 @@ code {
     padding: 10px 0px 20px 00px;
     text-align: center;
     width: 100%;
+    white-space: nowrap;
     img {
       width: 48px;
       height: 48px;  
